# Learn_GenAI_By_Doing

./: GENAI_NOTES.md
chatbot/: .gitignore  main.py  pyproject.toml  requirements.txt
gen_ai/: .ignore  embedding.py  main.py  pyproject.toml  requirements.txt
prepPal_RAG/: ChromaDB.py  main.py  pyproject.toml  temp.txt
prepPal_RAG/chroma_db/: chroma.sqlite3
prepPal_RAG/chunking/: TokenTextSplitter.py  characterTextSplitter.py  recursiveTextSplitting.py
prepPal_RAG/doc_loader/: pdf_loader.py  web_loader.py
runnables/: main.py  pyproject.toml
structured_output/: .gitignore  main.py  pyproject.toml
